--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         </div>
                         <div class="column lg-6 stack-on-1000 desc-block">
                             <p class="desc lead">
-                            L'édition 2023 du guide met à l'honneur l'offre culinaire parisienne en mettant l'accent sur 4 piliers : variété, accessibilité, nouveauté et diversité géographique. Les 3 articles ci-dessous font d'ailleurs partie des pépites que renferme notre dernière publication !
+                            Le guide du Dernier Métro met à l'honneur l'offre culinaire parisienne en mettant l'accent sur 4 piliers : variété, accessibilité, nouveauté et diversité géographique. Les 3 articles ci-dessous font d'ailleurs partie des pépites que renferme notre dernière publication !
                             </p>
                         </div>
                     </div>
@@ -301,10 +301,10 @@
                         </div>
                         <div class="column s-about__howto-screens-block">
                             <div class="s-about__howto-screens">
-                                <img src="images/screens/cover2.png"
-                                     srcset="images/screens/cover2.png 1x, images/screens/cover2.jpg 2x" alt="">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
+                                <img src="images/screens/cover.png"
+                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
                             </div>
                         </div>
                     </div>
