--- a/index.html
+++ b/index.html
@@ -332,10 +332,8 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M18.944 11.112C18.507 7.67 15.56 5 12 5 9.244 5 6.85 6.611 5.757 9.15 3.609 9.792 2 11.82 2 14c0 2.757 2.243 5 5 5h11c2.206 0 4-1.794 4-4a4.01 4.01 0 0 0-3.056-3.888zM18 17H7c-1.654 0-3-1.346-3-3 0-1.404 1.199-2.756 2.673-3.015l.581-.102.192-.558C8.149 8.274 9.895 7 12 7c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2z"></path></svg>
                             </div>
                             <div class="s-about__feature-text">
-                                <h3 class="h5">Cloud Based</h3>
-                                <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                                Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                                Sunt suscipit voluptas ipsa in tempora esse soluta sint aliquam rhoncus elit.
+                                <h3 class="h5">Un Papier Recyclé</h3>
+                                <p>L'édition 2023 du guide est entièrement imprimée sur un papier certifié 100% recyclé et par un imprimeur respectant les meilleures pratiques du milieu quant au respect de l'environnement dans ses techniques d'impression.  
                                 </p>
                             </div>
                         </div>
@@ -345,10 +343,8 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M18 7c0-1.103-.897-2-2-2H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-3.333L22 17V7l-4 3.333V7zm-1.998 10H4V7h12l.001 4.999L16 12l.001.001.001 4.999z"></path></svg>
                             </div>
                             <div class="s-about__feature-text">
-                                <h3 class="h5">Voice & Video</h3>
-                                <p>Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Quis risus sed vulputate 
-                                odio ut. Lectus arcu bibendum at varius vel. Lorem ipsum dolor sit amet consectetur adipiscing 
-                                elit pellentesque. In nulla posuere sollicitudin aliquam ultrices.
+                                <h3 class="h5">Moins d'exemplaires</h3>
+                                <p>Parce que proposer un papier recyclé ne suffit pas dans la lutte contre la déforestation, Le Dernier Métro s'engage à réduire progressivement le nombre de guides imprimés par édition jusqu'à atteindre un horizon 100% digital avant 2030.
                                 </p>
                             </div>
                         </div>
@@ -358,10 +354,8 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20.995 6.9a.998.998 0 0 0-.548-.795l-8-4a1 1 0 0 0-.895 0l-8 4a1.002 1.002 0 0 0-.547.795c-.011.107-.961 10.767 8.589 15.014a.987.987 0 0 0 .812 0c9.55-4.247 8.6-14.906 8.589-15.014zM12 19.897C5.231 16.625 4.911 9.642 4.966 7.635L12 4.118l7.029 3.515c.037 1.989-.328 9.018-7.029 12.264z"></path><path d="m11 12.586-2.293-2.293-1.414 1.414L11 15.414l5.707-5.707-1.414-1.414z"></path></svg>
                             </div>
                             <div class="s-about__feature-text">
-                                <h3 class="h5">Always Secure</h3>
-                                <p>Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Eu scelerisque felis 
-                                imperdiet proin fermentum leo. Cursus turpis massa tincidunt dui. Quis commodo odio aenean sed 
-                                adipiscing diam donec adipiscing. Congue mauris rhoncus elit.
+                                <h3 class="h5">Partenariat Eco-Tree</h3>
+                                <p>En parallèle de ces efforts de parution, l'association entreprend de reverser une compensation pour la publication de chaque ouvrage afin de compensation l'utilisation de papier par la subvention de la plantation de nouveaux arbres par l'organisme Eco-Tree.
                                 </p>
                             </div>
                         </div>
