--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                 <img src="images/screens/cover.png"
                                      srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
                             </div>
                         </div>
                     </div>
