--- a/index.html
+++ b/index.html
@@ -502,22 +502,22 @@
                     </div>
 
                 </div>
-                <div class="s-about__info">
+                <div class="s-about__info" height="800">
                     <div class="row s-about__screens-block">
                         
                         <div class="column lg-12">
 
                             <div class="s-about__screens">
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr3.png" width="2000" height="3000"
+                                    <img src="images/screens/mapstr3.png" width="400" height="600"
                                         srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
                                 </div>
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr2.png" width="2000" height="3000"
+                                    <img src="images/screens/mapstr2.png" width="400" height="600"
                                          srcset="images/screens/mapstr2.png 1x, images/screens/mapstr2.png 2x" alt="">
                                 </div>
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr1.png" width="2000" height="3000"
+                                    <img src="images/screens/mapstr1.png" width="400" height="600"
                                          srcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">
                                 </div>
                             </div>
@@ -526,6 +526,32 @@
 
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
             </section> <!-- end pricing -->
 
