--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
                         </div>
                         <div class="column s-about__howto-screens-block">
                             <div class="s-about__howto-screens">
-                                <img src="images/screens/cover.png" height="700" width="400"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="" height="700" width="400">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="" height="700" width="400">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
+                                <img src="images/screens/cover.png"
+                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
                             </div>
                         </div>
                     </div>
@@ -465,7 +465,7 @@
                     </div>
 
                 </div>
-                <div class="s-about__info" height="800">
+                <div class="s-about__info">
                     <div class="row s-about__screens-block">
                         
                         <div class="column lg-12">
