--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
                         <h3 class="h2">Le Mapstr de nos adresses</h3>
                         <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="display: inline-block; padding: 12px 20px; background-color: #ffc122; color: #fff; font-size: 18px; border-radius: 8px; text-decoration: none;">Mapstr</a>
                     </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1638460799767!6m8!1m7!1sCAoSLEFGMVFpcE9qYnZoTlJ6aWZwQWl6aGtjRkVXVnJyNkFhQk5zTnZrQWlLcUxh!2m2!1d48.8505138!2d2.3828977!3f0!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                 </div>
                 <div class="s-about__info">
