--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
                     </div>
                     
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.947226516!2d2.277020232738095!3d48.858837739413156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis%2C%20France!5e0!3m2!1sen!2sus!4v1638460504409!5m2!1sen!2sus" width="800" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe width="100%" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/fr/map/new/?scaleControl=false&miniMap=true&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&datalayers="></iframe><p><a href="//umap.openstreetmap.fr/fr/map/new/">Voir en plein écran</a></p>
 
                 </div>
                 <div class="s-about__info">
