images cover test

--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                         <h5>Exemplaires publiés</h5>
                     </div>
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">4,4<span>k</span></div>
+                        <div class="s-about__stats-count">4,2<span>k</span></div>
                         <h5>Abonnés Facebook</h5>
                     </div>
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">2,8<span>k</span></div>
+                        <div class="s-about__stats-count">2,2<span>k</span></div>
                         <h5>Abonnés Instagram</h5>
                     </div>
                     <div class="column s-about__stats-item">
@@ -302,11 +302,12 @@
                         <div class="column s-about__howto-screens-block">
                             <div class="s-about__howto-screens">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="" width="300" height="750">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="" width="300" height="750">
                             </div>
                         </div>
+                        
                     </div>
                 </div> <!-- end how-to -->
 
