il sent bon ce site

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
                         <div class="column s-about__howto-screens-block">
                             <div class="s-about__howto-screens">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="" width="350" height="750">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
                                 <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="" width="350" height="750">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
                             </div>
                         </div>
                         
@@ -473,7 +473,7 @@
                              }
                          }
                     </style>
-                    <iframe width="80%" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/fr/map/le-dernier-metro_910181?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&datalayers=2775248"></iframe>
+                    <iframe width="80%" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/fr/map/le-dernier-metro_910181?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&datalayers=2775248"></iframe>
                 
                 </div>
 
