--- a/index.html
+++ b/index.html
@@ -461,9 +461,17 @@
                 <div class="text-center s-testimonials__header">
                     
                     <div class="column lg-12">
+                        <div class="column lg-12"></div>
+                        <div class="column lg-12"></div>
                         <h3 class="h2">Le <span style="display: inline-block; padding: 12px 20px; background-color: #ffc122; color: #fff; font-size: 18px; border-radius: 8px; text-decoration: none;"><a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="color: inherit;">Mapstr</a></span> de nos adresses</h3>
                         <h3 class="h2"> </h3>
                     </div>
+
+                    <div class="column lg-12">
+                        <h3 class="h2">Le <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="color: #ffc122;">Mapstr</a></span> de nos adresses</h3>
+                        <h3 class="h2"> </h3>
+                    </div>
+
 
                     <style>
                         @media (max-width: 600px) {
