--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                              }
                          }
                     </style>
-                    <iframe width="80%" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/fr/map/le-dernier-metro_910181?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&datalayers=2775248"></iframe>
+                    <iframe width="80%" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/fr/map/le-dernier-metro_910181?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe>
                 
                 </div>
 
