--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
                         </div>
 
                     </div>
+                    <object data="guide_2022.pdf" type="application/pdf" width="800" height="600">
+                    </object>
                 </div> <!-- end screens -->
 
 
