--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         </div>
 
                     </div>
-                    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE_7Spjjnc&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">  </iframe></div><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE_7Spjjnc&#x2F;view?utm_content=DAE_7Spjjnc&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Le Guide 2022</a>
+                    <div style="position: relative; width: 300px; height: 600px; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE_7Spjjnc&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">  </iframe></div><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE_7Spjjnc&#x2F;view?utm_content=DAE_7Spjjnc&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Le Guide 2022</a>
                 </div> <!-- end screens -->
 
 
@@ -302,10 +302,7 @@
                         </div>
                         <div class="column s-about__howto-screens-block">
                             <div class="s-about__howto-screens">
-                                <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
-                                <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
+                                <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFX6Y547PM&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">  </iframe></div>
                             </div>
                         </div>
                         
