--- a/index.html
+++ b/index.html
@@ -258,7 +258,6 @@
                         </div>
 
                     </div>
-                    <div style="position: relative; width: 300px; height: 600px; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE_7Spjjnc&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">  </iframe></div><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE_7Spjjnc&#x2F;view?utm_content=DAE_7Spjjnc&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Le Guide 2022</a>
                 </div> <!-- end screens -->
 
 
@@ -339,7 +338,7 @@
             
                         <div class="column s-about__feature-item">
                             <div class="s-about__feature-icon-block">
-                                <svg width="24px" height="24px" viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>arrow_right [#292]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -6882.000000)" fill="#000000"> <g id="icons" transform="translate(56.000000, 160.000000)"> <polygon id="arrow_right-[#292]" points="16 6737 16 6735 20.653 6735 14.354 6728.702 11.821 6731.235 4 6723.414 5.414 6722 11.821 6728.407 12.94 6727.287 12.937 6727.284 14.351 6725.87 22 6733.519 22 6729 24 6729 24 6737"> </polygon> </g> </g> </g> </g></svg>
+                                <svg width="24px" height="24px" viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#10376C"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>arrow_right [#292]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -6882.000000)" fill="#10376C"> <g id="icons" transform="translate(56.000000, 160.000000)"> <polygon id="arrow_right-[#292]" points="16 6737 16 6735 20.653 6735 14.354 6728.702 11.821 6731.235 4 6723.414 5.414 6722 11.821 6728.407 12.94 6727.287 12.937 6727.284 14.351 6725.87 22 6733.519 22 6729 24 6729 24 6737"> </polygon> </g> </g> </g> </g></svg>
                             </div>
                             <div class="s-about__feature-text">
                                 <h3 class="h5">Moins d'exemplaires</h3>
