--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="row block-lg-one-fourth block-tab-one-half block-stack s-about__stats">
 
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">200</div>
+                        <div class="s-about__stats-count">+1000</div>
                         <h5>Exemplaires publiés</h5>
                     </div>
                     <div class="column s-about__stats-item">
@@ -545,7 +545,7 @@
                 <div class="column lg-50 md-60 stack-on-900">
                     <div class="footer__logo">
                         <a href="index.html">
-                            <img src="images/logo_LDM2.svg" alt="Homepage">
+                            <img src="images/logo_blanc_LDM.svg" alt="Homepage">
                         </a>
                     </div>
     
