logo ldm blanc2

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 <div class="column lg-50 md-60 stack-on-900">
                     <div class="footer__logo">
                         <a href="index.html">
-                            <img src="images/logo_blanc_LDM.svg" alt="Homepage">
+                            <img src="images/logo_LDMblanc.svg" alt="Homepage">
                         </a>
                     </div>
     
