--- a/index.html
+++ b/index.html
@@ -438,6 +438,11 @@
                                 </div> <!-- end s-testimonials__slide -->
                             </div> <!-- end swiper-wrapper -->
                             <div class="swiper-pagination"></div>
+                            <h3 class="h2"> </h3>
+                            <h3 class="h2"> </h3>
+                            <h3 class="h2"> </h3>
+                            <h3 class="h2"> </h3>
+                            <h3 class="h2"> </h3>
                         </div> <!-- end swiper-container -->
                     </div> <!-- end column -->
                 </div> <!-- end s-testimonials__content -->
