--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                             <div class="s-intro__content-buttons">
                                 <a href="https://www.canva.com/design/DAFX6Y547PM/3nHadR5Kr19qOyQtuDAoRw/view#4"> 
-                                <button>Le Guide 2023</button></a>
+                                <button fill="#10376C" size=90%>Le Guide 2023</button></a>
                                 <a src="images/reel_LDM.mp4" color="23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                     <svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                                 </a>
