--- a/index.html
+++ b/index.html
@@ -276,17 +276,15 @@
 
                             <div class="s-about__howto-process">
                                 <div class="s-about__howto-process-step">
-                                    <h3 class="h5">Des articles.</h3>
+                                    <h3 class="h5">Un contenu plus riche que jamais.</h3>
                                     <p>
-                                    Quos dolores saepe mollitia deserunt accusamus autem reprehenderit. Voluptas facere animi explicabo non quis magni recusandae. 
-                                    Numquam debitis non quis pariatur omnis facere unde. 
+                                    Cette édition marque l'ajout de nouvelles sections aux noms plus éloquants les uns que les autres comme le Dernier des rats ou le Premier des canards - pour les amoureux des métaphores animales, ou encore le Tour du monde en 9 restaurants ou les Coups de coeur du pôle barathon - pour les plus passionnés d'entre vous.
                                     </p>
                                 </div>
                                 <div class="s-about__howto-process-step">
-                                    <h3 class="h5">Des tops.</h3>
+                                    <h3 class="h5">Un lancement en bonne et due forme.</h3>
                                     <p>
-                                    Commodi vero praesentium ex eum sunt. Deserunt animi velit. Eum explicabo omnis at aut perferendis veniam. Corporis expedita 
-                                    voluptas culpa dicta qui tempora non explicabo omnis at sint tempora.
+                                    Aller à Paris pour découvrir c'est bien mais faire venir Paris dans ta ville c'est meieux. C'est pourquoi les Métropolitains ont offert aux heureux cergyssois la chance de rencontrer des caricaturistes, mimes, et autres artistes de la scène parisienne le temps de quelques jours.
                                     </p>
                                 </div>
                             </div> <!-- end how-to process -->
