--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                 <div class="s-about__howto-process-step">
                                     <h3 class="h5">Un contenu plus riche que jamais.</h3>
                                     <p>
-                                    Cette édition marque l'ajout de nouvelles sections aux noms plus éloquants les uns que les autres comme le Dernier des rats ou le Premier des canards - pour les amoureux des métaphores animales, ou encore le Tour du monde en 9 restaurants ou les Coups de coeur du pôle barathon - pour les plus passionnés d'entre vous.
+                                    Cette édition marque l'ajout de nouvelles sections aux noms plus éloquents les uns que les autres comme le Dernier des rats ou le Premier des canards - pour les amoureux des métaphores animales, ou encore le Tour du monde en 9 restaurants ou les Coups de coeur du pôle barathon - pour les plus passionnés d'entre vous.
                                     </p>
                                 </div>
                                 <div class="s-about__howto-process-step">
