mapstr bien + test bouton mapstr

--- a/index.html
+++ b/index.html
@@ -106,8 +106,17 @@
 
                             <div class="s-intro__content-buttons">
                                 <a href="https://www.canva.com/design/DAFX6Y547PM/3nHadR5Kr19qOyQtuDAoRw/view#1" target="_blank" class="btn btn--primary s-intro__content-btn">Le Guide 2023</a>
-                                <a src="images/reel_LDM.mp4" color="23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
-                                    <svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
+                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="ffc122&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
+                                    <?xml version="1.0" standalone="no"?>
+                                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
+                                    "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
+                                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+                                    width="24pt" height="24pt" viewBox="0 0 24 24"
+                                    preserveAspectRatio="xMidYMid meet">
+                                    <g transform="translate(0,24) scale(0.1,-0.1)"
+                                    fill="#000000" stroke="none">
+                                    </g>
+                                    </svg>
                                 </a>
                             </div>
                         </div>
@@ -491,7 +500,7 @@
                          }
                     </style>
                     <iframe width="80%" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/fr/map/le-dernier-metro_920247?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe>
-                
+
                 </div>
 
 
