--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                             <div class="s-intro__content-buttons">
                                 <a href="https://www.canva.com/design/DAFX6Y547PM/3nHadR5Kr19qOyQtuDAoRw/view#1" target="_blank" class="btn btn--primary s-intro__content-btn">Le Guide 2023</a>
-                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="ffc122&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
+                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="ffc122&title=0&byline=0&portrait=0" class="btn btn--primary s-intro__content-btn">
                                     <?xml version="1.0" standalone="no"?>
                                     <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
                                     "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
