test couleur update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </p> 
                             <div class="s-intro__content-buttons">
                                 <a href="https://www.canva.com/design/DAFX6Y547PM/3nHadR5Kr19qOyQtuDAoRw/view#1" target="_blank" class="btn btn--primary s-intro__content-btn">Le Guide 2023</a>
-                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
+                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="ffc122&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="540" height="540" viewBox="0 0 540 540" xml:space="preserve">
                                     <desc>Created with Fabric.js 5.2.4</desc>
                                     <defs>
