button--small au lieu de button--primary

--- a/styles.html
+++ b/styles.html
@@ -111,8 +111,8 @@
                         </p> 
 
                         <div class="s-intro__content-buttons">
-                            <a href="#0" class="btn btn--primary s-intro__content-btn">Get Started</a>
-                            <a src="images/reel_LDM.mp4" class="s-intro__content-video-btn">
+                            <a href="#0" class="btn btn--small s-intro__content-btn">Get Started</a>
+                            <a href="#0" class="s-intro__content-video-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                             </a>
                         </div>
