peaufiner en svg

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="s-intro__content-buttons">
                                 <a href="https://www.canva.com/design/DAFX6Y547PM/3nHadR5Kr19qOyQtuDAoRw/view#1" target="_blank" class="btn btn--primary s-intro__content-btn">Le Guide 2023</a>
                                 <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="ffc122" class="s-intro__content-video-btn">
-                                    <img src="images/mapstr_logo_wbg.svg" height="32" width="32">
+                                    <svg src="images/mapstr_logo_wbg.svg" height="32" width="32"></svg>
                                 </a>
                             </div>
 
