--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                             </p> 
                             <div class="s-intro__content-buttons">
                                 <a href="https://www.canva.com/design/DAFX6Y547PM/3nHadR5Kr19qOyQtuDAoRw/view#1" target="_blank" class="btn btn--primary s-intro__content-btn">Le Guide 2023</a>
-                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" src="images/mapstr_blanc.svg" color="ffc122" class="s-intro__content-video-btn">
-                                </a>
+                                <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" color="ffc122" class="s-intro__content-video-btn">Mapstr</a>
                             </div>
 
                         </div>
