--- a/index.html
+++ b/index.html
@@ -427,9 +427,7 @@
                                         </cite>
                                     </div>
                                     <p>
-                                    Nunc interdum lacus sit amet orci. Vestibulum dapibus nunc ac augue. Fusce vel dui. In ac felis 
-                                    quis tortor malesuada pretium. Curabitur vestibulum aliquam leo. Qui sed at corrupti expedita voluptas odit. 
-                                    Nihil ea quia nesciunt. Ducimus aut sed ipsam.
+test
                                     </p>
                                 </div> <!-- end s-testimonials__slide -->
                             </div> <!-- end swiper-wrapper -->
